Ingestion API tests